Mise à jour automatique de la base des données des articles

--- a/Programme_Maj_francetvinfo.ipynb
+++ b/Programme_Maj_francetvinfo.ipynb
@@ -477,17 +477,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2212</th>\n",
-       "      <td>Guerre en Ukraine : Volodymyr Zelensky reconna...</td>\n",
-       "      <td>Tue, 20 Feb 2024 06:32:37 +0100</td>\n",
-       "      <td>[Franceinfo Avec Afp]</td>\n",
-       "      <td>europe</td>\n",
-       "      <td>Le président ukrainien estime que Kiev manque ...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/qlbIw1ycY...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2213</th>\n",
        "      <td>Marc Aublet, PDG de Provalliance : \"On a passé...</td>\n",
        "      <td>Mon, 19 Feb 2024 21:34:41 +0100</td>\n",
@@ -506,7 +495,7 @@
        "      <td>europe</td>\n",
        "      <td>L’analyse de centaines de vidéos sur les résea...</td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -517,7 +506,7 @@
        "      <td>europe</td>\n",
        "      <td>Jean-Philippe Lecouffe, directeur exécutif adj...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/PfhtuMkGs...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/internet/securite-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -528,12 +517,23 @@
        "      <td>europe</td>\n",
        "      <td>Le président ukrainien s'est inquiété lundi, d...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/le9S4oMDC...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2217</th>\n",
+       "      <td>Justice : à Montpellier, un homme tue son ex-é...</td>\n",
+       "      <td>Tue, 20 Feb 2024 20:47:53 +0100</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>Un homme de 72 ans a tué son ex-femme, âgée de...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/bWXDePSNu...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.francetvinfo.fr/faits-divers/justi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2217 rows × 8 columns</p>\n",
+       "<p>2218 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -544,11 +544,11 @@
        "3     \"13h15 le dimanche\". Le Mont-Blanc, un mythe é...   \n",
        "4     Loi de bioéthique : les opposants à la PMA man...   \n",
        "...                                                 ...   \n",
-       "2212  Guerre en Ukraine : Volodymyr Zelensky reconna...   \n",
        "2213  Marc Aublet, PDG de Provalliance : \"On a passé...   \n",
        "2214  VIDEO. Guerre en Ukraine : comment la Younarmi...   \n",
        "2215  Europol se félicite de l'opération contre les ...   \n",
        "2216  Guerre en Ukraine : pourquoi la situation sur ...   \n",
+       "2217  Justice : à Montpellier, un homme tue son ex-é...   \n",
        "\n",
        "                                 date  \\\n",
        "0                 2020-01-19T16:31:16   \n",
@@ -557,11 +557,11 @@
        "3                 2020-01-19T16:29:48   \n",
        "4                 2020-01-19T16:08:10   \n",
        "...                               ...   \n",
-       "2212  Tue, 20 Feb 2024 06:32:37 +0100   \n",
        "2213  Mon, 19 Feb 2024 21:34:41 +0100   \n",
        "2214  Tue, 20 Feb 2024 20:57:12 +0100   \n",
        "2215  Tue, 20 Feb 2024 18:31:25 +0100   \n",
        "2216  Tue, 20 Feb 2024 17:45:02 +0100   \n",
+       "2217  Tue, 20 Feb 2024 20:47:53 +0100   \n",
        "\n",
        "                                                 author  category  \\\n",
        "0                                                    []    france   \n",
@@ -570,11 +570,11 @@
        "3                                                    []    france   \n",
        "4                                                    []    france   \n",
        "...                                                 ...       ...   \n",
-       "2212                              [Franceinfo Avec Afp]    europe   \n",
        "2213  [Camille Revel, Marc Aublet, Pdg De Provalliance]  economie   \n",
        "2214                                                 []    europe   \n",
        "2215                                    [Richard Place]    europe   \n",
        "2216  [Valentine Pasquesoone, Le Centre D'Analyse In...    europe   \n",
+       "2217                                                 []    france   \n",
        "\n",
        "                                                content  \\\n",
        "0     Beaucoup de maires et de secrétaires de mairie...   \n",
@@ -583,11 +583,11 @@
        "3     Point culminant de la chaîne des Alpes avec un...   \n",
        "4     Des associations catholiques, des jeunes, des ...   \n",
        "...                                                 ...   \n",
-       "2212  Le président ukrainien estime que Kiev manque ...   \n",
        "2213  Le groupe Provalliance, qui comprend les marqu...   \n",
        "2214  L’analyse de centaines de vidéos sur les résea...   \n",
        "2215  Jean-Philippe Lecouffe, directeur exécutif adj...   \n",
        "2216  Le président ukrainien s'est inquiété lundi, d...   \n",
+       "2217  Un homme de 72 ans a tué son ex-femme, âgée de...   \n",
        "\n",
        "                                             image_link image_file  \\\n",
        "0     https://www.francetvinfo.fr/image/75rt1bxrp-70...       None   \n",
@@ -596,11 +596,11 @@
        "3     https://www.francetvinfo.fr/image/75rszkkvp-24...       None   \n",
        "4     https://www.francetvinfo.fr/image/75rt1bbs2-3f...       None   \n",
        "...                                                 ...        ...   \n",
-       "2212  https://www.francetvinfo.fr/pictures/qlbIw1ycY...       None   \n",
        "2213                                                          None   \n",
-       "2214                                                           NaN   \n",
-       "2215  https://www.francetvinfo.fr/pictures/PfhtuMkGs...        NaN   \n",
-       "2216  https://www.francetvinfo.fr/pictures/le9S4oMDC...        NaN   \n",
+       "2214                                                          None   \n",
+       "2215  https://www.francetvinfo.fr/pictures/PfhtuMkGs...       None   \n",
+       "2216  https://www.francetvinfo.fr/pictures/le9S4oMDC...       None   \n",
+       "2217  https://www.francetvinfo.fr/pictures/bWXDePSNu...        NaN   \n",
        "\n",
        "                                                    url  \n",
        "0     https://www.francetvinfo.fr/sante/prevention/e...  \n",
@@ -609,13 +609,13 @@
        "3     https://www.francetvinfo.fr/replay-magazine/fr...  \n",
        "4     https://www.francetvinfo.fr/societe/loi-de-bio...  \n",
        "...                                                 ...  \n",
-       "2212  https://www.francetvinfo.fr/monde/europe/manif...  \n",
        "2213  https://www.francetvinfo.fr/replay-radio/l-int...  \n",
        "2214  https://www.francetvinfo.fr/monde/europe/manif...  \n",
        "2215  https://www.francetvinfo.fr/internet/securite-...  \n",
        "2216  https://www.francetvinfo.fr/monde/europe/manif...  \n",
+       "2217  https://www.francetvinfo.fr/faits-divers/justi...  \n",
        "\n",
-       "[2217 rows x 8 columns]"
+       "[2218 rows x 8 columns]"
       ]
      },
      "execution_count": 3,
@@ -732,39 +732,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2209</th>\n",
-       "      <td>Eurozapping : le pilote d’un bateau de migrant...</td>\n",
-       "      <td>Tue, 20 Feb 2024 10:16:05 +0100</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>europe</td>\n",
-       "      <td>Comme chaque soir, le JT du 23h info fait un t...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/jGCFTFiWy...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-jt/francein...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2210</th>\n",
-       "      <td>TEMOIGNAGE. \"Il pourrait être assassiné, ce n'...</td>\n",
-       "      <td>Tue, 20 Feb 2024 08:33:11 +0100</td>\n",
-       "      <td>[Richard Place, Stella Assange]</td>\n",
-       "      <td>europe</td>\n",
-       "      <td>Le fondateur de WikiLeaks est emprisonné à la ...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/RYcpP11aY...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-radio/le-ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2211</th>\n",
-       "      <td>Colère des agriculteurs : comment le gouvernem...</td>\n",
-       "      <td>Tue, 20 Feb 2024 08:18:11 +0100</td>\n",
-       "      <td>[Hadrien Bect]</td>\n",
-       "      <td>europe</td>\n",
-       "      <td>A cinq jours de ce rendez-vous toujours marqua...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/tAbXsW-j0...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>https://www.francetvinfo.fr/economie/crise/blo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2212</th>\n",
        "      <td>Guerre en Ukraine : Volodymyr Zelensky reconna...</td>\n",
        "      <td>Tue, 20 Feb 2024 06:32:37 +0100</td>\n",
@@ -786,9 +753,42 @@
        "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/replay-radio/l-int...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2214</th>\n",
+       "      <td>VIDEO. Guerre en Ukraine : comment la Younarmi...</td>\n",
+       "      <td>Tue, 20 Feb 2024 20:57:12 +0100</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>L’analyse de centaines de vidéos sur les résea...</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2215</th>\n",
+       "      <td>Europol se félicite de l'opération contre les ...</td>\n",
+       "      <td>Tue, 20 Feb 2024 18:31:25 +0100</td>\n",
+       "      <td>[Richard Place]</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>Jean-Philippe Lecouffe, directeur exécutif adj...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/PfhtuMkGs...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/internet/securite-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2216</th>\n",
+       "      <td>Guerre en Ukraine : pourquoi la situation sur ...</td>\n",
+       "      <td>Tue, 20 Feb 2024 17:45:02 +0100</td>\n",
+       "      <td>[Valentine Pasquesoone, Le Centre D'Analyse In...</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>Le président ukrainien s'est inquiété lundi, d...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/le9S4oMDC...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2214 rows × 8 columns</p>\n",
+       "<p>2217 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -799,11 +799,11 @@
        "3     \"13h15 le dimanche\". Le Mont-Blanc, un mythe é...   \n",
        "4     Loi de bioéthique : les opposants à la PMA man...   \n",
        "...                                                 ...   \n",
-       "2209  Eurozapping : le pilote d’un bateau de migrant...   \n",
-       "2210  TEMOIGNAGE. \"Il pourrait être assassiné, ce n'...   \n",
-       "2211  Colère des agriculteurs : comment le gouvernem...   \n",
        "2212  Guerre en Ukraine : Volodymyr Zelensky reconna...   \n",
        "2213  Marc Aublet, PDG de Provalliance : \"On a passé...   \n",
+       "2214  VIDEO. Guerre en Ukraine : comment la Younarmi...   \n",
+       "2215  Europol se félicite de l'opération contre les ...   \n",
+       "2216  Guerre en Ukraine : pourquoi la situation sur ...   \n",
        "\n",
        "                                 date  \\\n",
        "0                 2020-01-19T16:31:16   \n",
@@ -812,11 +812,11 @@
        "3                 2020-01-19T16:29:48   \n",
        "4                 2020-01-19T16:08:10   \n",
        "...                               ...   \n",
-       "2209  Tue, 20 Feb 2024 10:16:05 +0100   \n",
-       "2210  Tue, 20 Feb 2024 08:33:11 +0100   \n",
-       "2211  Tue, 20 Feb 2024 08:18:11 +0100   \n",
        "2212  Tue, 20 Feb 2024 06:32:37 +0100   \n",
        "2213  Mon, 19 Feb 2024 21:34:41 +0100   \n",
+       "2214  Tue, 20 Feb 2024 20:57:12 +0100   \n",
+       "2215  Tue, 20 Feb 2024 18:31:25 +0100   \n",
+       "2216  Tue, 20 Feb 2024 17:45:02 +0100   \n",
        "\n",
        "                                                 author  category  \\\n",
        "0                                                    []    france   \n",
@@ -825,11 +825,11 @@
        "3                                                    []    france   \n",
        "4                                                    []    france   \n",
        "...                                                 ...       ...   \n",
-       "2209                                                 []    europe   \n",
-       "2210                    [Richard Place, Stella Assange]    europe   \n",
-       "2211                                     [Hadrien Bect]    europe   \n",
        "2212                              [Franceinfo Avec Afp]    europe   \n",
        "2213  [Camille Revel, Marc Aublet, Pdg De Provalliance]  economie   \n",
+       "2214                                                 []    europe   \n",
+       "2215                                    [Richard Place]    europe   \n",
+       "2216  [Valentine Pasquesoone, Le Centre D'Analyse In...    europe   \n",
        "\n",
        "                                                content  \\\n",
        "0     Beaucoup de maires et de secrétaires de mairie...   \n",
@@ -838,11 +838,11 @@
        "3     Point culminant de la chaîne des Alpes avec un...   \n",
        "4     Des associations catholiques, des jeunes, des ...   \n",
        "...                                                 ...   \n",
-       "2209  Comme chaque soir, le JT du 23h info fait un t...   \n",
-       "2210  Le fondateur de WikiLeaks est emprisonné à la ...   \n",
-       "2211  A cinq jours de ce rendez-vous toujours marqua...   \n",
        "2212  Le président ukrainien estime que Kiev manque ...   \n",
        "2213  Le groupe Provalliance, qui comprend les marqu...   \n",
+       "2214  L’analyse de centaines de vidéos sur les résea...   \n",
+       "2215  Jean-Philippe Lecouffe, directeur exécutif adj...   \n",
+       "2216  Le président ukrainien s'est inquiété lundi, d...   \n",
        "\n",
        "                                             image_link image_file  \\\n",
        "0     https://www.francetvinfo.fr/image/75rt1bxrp-70...       None   \n",
@@ -851,11 +851,11 @@
        "3     https://www.francetvinfo.fr/image/75rszkkvp-24...       None   \n",
        "4     https://www.francetvinfo.fr/image/75rt1bbs2-3f...       None   \n",
        "...                                                 ...        ...   \n",
-       "2209  https://www.francetvinfo.fr/pictures/jGCFTFiWy...       None   \n",
-       "2210  https://www.francetvinfo.fr/pictures/RYcpP11aY...       None   \n",
-       "2211  https://www.francetvinfo.fr/pictures/tAbXsW-j0...       None   \n",
        "2212  https://www.francetvinfo.fr/pictures/qlbIw1ycY...       None   \n",
        "2213                                                          None   \n",
+       "2214                                                          None   \n",
+       "2215  https://www.francetvinfo.fr/pictures/PfhtuMkGs...       None   \n",
+       "2216  https://www.francetvinfo.fr/pictures/le9S4oMDC...       None   \n",
        "\n",
        "                                                    url  \n",
        "0     https://www.francetvinfo.fr/sante/prevention/e...  \n",
@@ -864,13 +864,13 @@
        "3     https://www.francetvinfo.fr/replay-magazine/fr...  \n",
        "4     https://www.francetvinfo.fr/societe/loi-de-bio...  \n",
        "...                                                 ...  \n",
-       "2209  https://www.francetvinfo.fr/replay-jt/francein...  \n",
-       "2210  https://www.francetvinfo.fr/replay-radio/le-ch...  \n",
-       "2211  https://www.francetvinfo.fr/economie/crise/blo...  \n",
        "2212  https://www.francetvinfo.fr/monde/europe/manif...  \n",
        "2213  https://www.francetvinfo.fr/replay-radio/l-int...  \n",
+       "2214  https://www.francetvinfo.fr/monde/europe/manif...  \n",
+       "2215  https://www.francetvinfo.fr/internet/securite-...  \n",
+       "2216  https://www.francetvinfo.fr/monde/europe/manif...  \n",
        "\n",
-       "[2214 rows x 8 columns]"
+       "[2217 rows x 8 columns]"
       ]
      },
      "execution_count": 4,
